--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,13 @@
     <color name="colorLibre">#A0C55F</color>
     <color name="colorOccupee">#BF4D28</color>
     <color name="colorAjouter">#197596</color>
-    <color name="colorRestitution">#962318</color>
-    <color name="colorTitre">#484848</color>
+    <color name="colorRestitution">#961937</color>
+    <color name="colorTitre">#000</color>
+    <color name="colorVehiculeLocation">#F4ECF7</color>
+    <color name="colorTitreLocation">#092C38</color>
+    <color name="colorBtn">#197596</color>
+
+
+
+
 </resources>
