--- a/app/src/main/res/layout/activity_resume_location.xml
+++ b/app/src/main/res/layout/activity_resume_location.xml
@@ -182,9 +182,9 @@
 
                     <Button
                         android:id="@+id/picDateStart"
-                        android:layout_width="30dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.5"
                         android:background="@color/colorBtn"
                         android:onClick="datePickerStart"
                         android:text="Date Début"
@@ -192,9 +192,9 @@
                         android:layout_marginLeft="10dp"/>
                         <Button
                             android:id="@+id/picDateEnd"
-                            android:layout_width="30dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:layout_weight="0.5"
                             android:layout_marginRight="10dp"
                             android:background="@color/colorWhite"
                             android:onClick="datePickerFin"
@@ -217,14 +217,14 @@
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/dateStart"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
                             android:layout_below="@+id/picDateStart"
                             android:textSize="18dp"/>
                          <TextView
                             android:id="@+id/dateEnd"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                              android:layout_weight="0.5"
                             android:layout_below="@id/dateStart"
